--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dialogflownodejs",
   "version": "1.0.0",
-  "description": "Example to detect intent DialogFlow",
+  "description": "Example to detect intent in DialogFlow",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,7 @@
   "author": "Cristian Yosafat Hernández Ruiz",
   "license": "ISC",
   "dependencies": {
-    "dialogflow": "^1.2.0",
+    "@google-cloud/dialogflow": "^3.3.0",
     "dotenv": "^8.2.0"
   }
 }
